force-app/main/default/objects/ssot__LearningPathwayTemplateItem__dlm/fields/ssot__LearningPathwayTemplateId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningPathwayTemplateId__c</fullName>
    <label>Learning Pathway Template</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningPathwayTemplateId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>