force-app/main/default/objects/ssot__LearningPathwayTemplateItem__dlm/fields/ssot__LearningProgramPlanRequirementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningProgramPlanRequirementId__c</fullName>
    <label>Learning Program Plan Requirement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningProgramPlanRequirementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>