force-app/main/default/objects/ssot__LearningPathwayTemplateItem__dlm/fields/ssot__rel_1719819895136_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819895136_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningPathwayTemplateItem_Learning_rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>LearningPathwayTemplateItem_Learning_rel</relationshipLabel>
    <relationshipName>rel_1719819895136_end</relationshipName>
    <type>Lookup</type>
</CustomField>