force-app/main/default/objects/ssot__LearningPathwayTemplateItem__dlm/fields/ssot__Season__c.field-meta.xml
<CustomField>
    <fullName>ssot__Season__c</fullName>
    <label>Season</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Season</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>